[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Menu/ChoseStage.gd" type="Script" id=1]
[ext_resource path="res://Stages/montserrat_eb_48.tres" type="DynamicFont" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 424.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Fase 1"

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Fase 2"

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Fase 3"
[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_Button3_pressed"]
